--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    background-color: lightblue;
+    background-color: white;
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
     padding: 50px;
