--- a/style.css
+++ b/style.css
@@ -5,6 +5,21 @@ body{
     padding: 50px;
 }
 
+.navbar {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    padding: 20px;
+    background-color: white;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    margin-bottom: 30px;
+}
+
+.navbar button{
+    padding: 12px 24px;
+
+}
+
 h1{
     color:black;
     font-size: 40px;
